--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">RippleSearch</string>
-    <string name="setup_guide"><![CDATA[1. On a Home screen, touch and hold an empty space.\n2. Tap Widgets .\n3. Touch and hold a widget. You’ll get images of your Home screens.\n4. Slide the widget to where you want it. Lift your finger.]]></string>
+    <string name="setup_guide1"><![CDATA[Thanks for installing RippleSearch. \nUsing the apps icon will bring you straight to RippleSearch.com in your favorite browser.]]></string>
+    <string name="setup_guide2"><![CDATA[Adding our widget allows you to start your search straight from your home screen. \nLet\'s make Ripples together.]]></string>
+
 </resources>
